--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<div id="header" class="mainHeader">
 		<hr>
-		<div class="center">Subdomain Caf&eacute;</div>
+		<div class="center">Nate's Caf&eacute;</div>
 	</div>
 	<br>
 	
